--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+*{
+  margin:auto;
+  padding: auto;
+  font-family: Poppins;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+Body{
+  background-color: #2F303A;
+  font-family: 'Poppins', sans-serif;
   color: white;
+} 
+header{
+  display: flex;
 }
-
-.App-link {
-  color: #61dafb;
+.boton{
+  background-color: #1762A7;
+  color: white;
+  padding: 14px 20px;
+  margin-top: 1em;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.circle1 {
+  background:#bc3a801a;
+  border-radius: 50%;
+  position: absolute;
+  top :0;
+  transform: translate(100px, 100px);
+  width: 500px;
+  height: 500px;
+}
+.circle2 {
+  background:#bc3a801a;
+  border-radius: 50%;
+  position: absolute;
+  top :0;
+  transform: translate(100px, 100px);
+  width: 500px;
+  height: 500px; 
 }
