--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@ Body{
 header{
   display: flex; 
 }
+.imgGirl{
+  max-width: 65%;
+  max-height: 65%;
+}
+
 #logo1{
   gap: 10px;
   display: flex; 
@@ -59,6 +64,13 @@ header{
 }
 .button-form:hover{
   background-color: #1762A7;
+}
+.text-join{
+  font-size: 2.5rem;
+}
+.acent{
+  font-size: 2.5rem;
+  color: fuchsia;
 }
 #footer>div {
   display: flex;
