--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,15 @@ header{
   max-width: 65%;
   max-height: 65%;
 }
-
+.Discover{
+  padding-bottom: 10%;
+  padding-top: 10%;
+  
+}
+.imgCover{
+  max-width: 65%;
+  max-height: 65%;
+}
 #logo1{
   gap: 10px;
   display: flex; 
@@ -65,6 +73,7 @@ header{
 .button-form:hover{
   background-color: #1762A7;
 }
+
 .text-join{
   font-size: 2.5rem;
 }
@@ -75,7 +84,9 @@ header{
 #footer>div {
   display: flex;
   gap: 10px;
+  padding: auto;
 }
 #footer{
   display:flex;
+ 
 }
